First commited as before_1615_rev1