@@ -46,16 +46,11 @@ import org.eclipse.jgit.errors.InvalidPatternException;
 import org.eclipse.jgit.fnmatch.FileNameMatcher;
 
 /**
- * A single ignore rule corresponding to one line in a .gitignore or ignore
- * file. Parses the ignore pattern
+ * A single ignore rule corresponding to one line in a .gitignore or
+ * ignore file. Parses the ignore pattern
  *
  * Inspiration from: Ferry Huberts
- *
- * @deprecated this rule does not support double star pattern and is slow
- *             parsing glob expressions. Consider to use {@link FastIgnoreRule}
- *             instead. See https://bugs.eclipse.org/bugs/show_bug.cgi?id=440732
  */
-@Deprecated
 public class IgnoreRule {
 	private String pattern;
 	private boolean negation;
@@ -87,32 +82,32 @@ public class IgnoreRule {
 	private void setup() {
 		int startIndex = 0;
 		int endIndex = pattern.length();
-		if (pattern.startsWith("!")) { //$NON-NLS-1$
+		if (pattern.startsWith("!")) {
 			startIndex++;
 			negation = true;
 		}
 
-		if (pattern.endsWith("/")) { //$NON-NLS-1$
+		if (pattern.endsWith("/")) {
 			endIndex --;
 			dirOnly = true;
 		}
+		boolean hasSlash = pattern.contains("/");
 
 		pattern = pattern.substring(startIndex, endIndex);
-		boolean hasSlash = pattern.contains("/"); //$NON-NLS-1$
 
 		if (!hasSlash)
 			nameOnly = true;
-		else if (!pattern.startsWith("/")) { //$NON-NLS-1$
+		else if (!pattern.startsWith("/")) {
 			//Contains "/" but does not start with one
 			//Adding / to the start should not interfere with matching
-			pattern = "/" + pattern; //$NON-NLS-1$
+			pattern = "/" + pattern;
 		}
 
-		if (pattern.contains("*") || pattern.contains("?") || pattern.contains("[")) { //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+		if (pattern.contains("*") || pattern.contains("?") || pattern.contains("[")) {
 			try {
-				matcher = new FileNameMatcher(pattern, Character.valueOf('/'));
+				matcher = new FileNameMatcher(pattern, new Character('/'));
 			} catch (InvalidPatternException e) {
-				// Ignore pattern exceptions
+				e.printStackTrace();
 			}
 		}
 	}
@@ -169,8 +164,8 @@ public class IgnoreRule {
 	 * 			  the target is ignored. Call {@link IgnoreRule#getResult() getResult()} for the result.
 	 */
 	public boolean isMatch(String target, boolean isDirectory) {
-		if (!target.startsWith("/")) //$NON-NLS-1$
-			target = "/" + target; //$NON-NLS-1$
+		if (!target.startsWith("/"))
+			target = "/" + target;
 
 		if (matcher == null) {
 			if (target.equals(pattern)) {
@@ -188,59 +183,39 @@ public class IgnoreRule {
 			 * "/src/new" to /src/newfile" but allows "/src/new" to match
 			 * "/src/new/newfile", as is the git standard
 			 */
-			if ((target).startsWith(pattern + "/")) //$NON-NLS-1$
+			if ((target).startsWith(pattern + "/"))
 				return true;
 
 			if (nameOnly) {
 				//Iterate through each sub-name
-				final String[] segments = target.split("/"); //$NON-NLS-1$
-				for (int idx = 0; idx < segments.length; idx++) {
-					final String segmentName = segments[idx];
-					// String.split("/") creates empty segment for leading slash
-					if (segmentName.length() == 0)
-						continue;
-					if (segmentName.equals(pattern) &&
-							doesMatchDirectoryExpectations(isDirectory, idx, segments.length))
+				for (String folderName : target.split("/")) {
+					if (folderName.equals(pattern))
 						return true;
 				}
 			}
 
 		} else {
-			matcher.reset();
 			matcher.append(target);
 			if (matcher.isMatch())
 				return true;
 
-			final String[] segments = target.split("/"); //$NON-NLS-1$
 			if (nameOnly) {
-				for (int idx = 0; idx < segments.length; idx++) {
-					final String segmentName = segments[idx];
-					// String.split("/") creates empty segment for leading slash
-					if (segmentName.length() == 0)
-						continue;
+				for (String folderName : target.split("/")) {
 					//Iterate through each sub-directory
 					matcher.reset();
-					matcher.append(segmentName);
-					if (matcher.isMatch() &&
-							doesMatchDirectoryExpectations(isDirectory, idx, segments.length))
+					matcher.append(folderName);
+					if (matcher.isMatch())
 						return true;
 				}
 			} else {
 				//TODO: This is the slowest operation
 				//This matches e.g. "/src/ne?" to "/src/new/file.c"
 				matcher.reset();
+				for (String folderName : target.split("/")) {
+					if (folderName.length() > 0)
+						matcher.append("/" + folderName);
 
-				for (int idx = 0; idx < segments.length; idx++) {
-					final String segmentName = segments[idx];
-					// String.split("/") creates empty segment for leading slash
-					if (segmentName.length() == 0)
-						continue;
-
-					matcher.append("/" + segmentName); //$NON-NLS-1$
-
-					if (matcher.isMatch()
-							&& doesMatchDirectoryExpectations(isDirectory, idx,
-									segments.length))
+					if (matcher.isMatch())
 						return true;
 				}
 			}
@@ -259,20 +234,5 @@ public class IgnoreRule {
 	 */
 	public boolean getResult() {
 		return !negation;
-	}
-
-	private boolean doesMatchDirectoryExpectations(boolean isDirectory, int segmentIdx, int segmentLength) {
-		// The segment we are checking is a directory, expectations are met.
-		if (segmentIdx < segmentLength - 1) {
-			return true;
-		}
-
-		// We are checking the last part of the segment for which isDirectory has to be considered.
-		return !dirOnly || isDirectory;
-	}
-
-	@Override
-	public String toString() {
-		return pattern;
 	}
 }
